add very well hidden hint about the keyboard controls

--- a/index.pug
+++ b/index.pug
@@ -66,7 +66,7 @@ html(lang="en-US")
               option(v-for="functionName in generatorFunctionList", :value=functionName).
                 {{ functionName }}
 
-        label.pannel__setting 
+        label.pannel__setting(title="Or use arrow keys ↔")
           h4.pannel__settingtitle 
             span Mix Padding
             input(type="number", v-model.number="padding", min="0", max="1", step=".001")
@@ -153,7 +153,7 @@ html(lang="en-US")
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.25 36.8">
             <path d="M12.9,0A4.12,4.12,0,0,0,8.79,4.1a1.27,1.27,0,0,0,0,.2H5.62A5.63,5.63,0,0,0,0,9.93V31.18A5.62,5.62,0,0,0,5.62,36.8h15a5.63,5.63,0,0,0,5.63-5.62V9.93A5.64,5.64,0,0,0,20.62,4.3H18.74v0l-.28,0H17c0-.07,0-.13,0-.2A4.12,4.12,0,0,0,12.9,0Zm0,1.88a2.2,2.2,0,0,1,2.22,2.2v0a2.13,2.13,0,0,1-.11.7A1,1,0,0,0,15.26,6a1,1,0,0,0,.82.17h2.38c.08,0,.11,0,.11.11V8.12c0,.08,0,.11-.11.11H7.79c-.08,0-.11,0-.11-.11V6.3a.1.1,0,0,1,.09-.11H10a1,1,0,0,0,.75-.48.94.94,0,0,0,0-.89,2.38,2.38,0,0,1-.11-.7,2.2,2.2,0,0,1,2.19-2.23h0ZM5.62,6.18h.19s0,.08,0,.11V8.11a2,2,0,0,0,2,2H18.46a2,2,0,0,0,2-2V6.29a.45.45,0,0,0,0-.11h.18a3.74,3.74,0,0,1,3.75,3.75h0V31.18a3.74,3.74,0,0,1-3.75,3.75h-15a3.74,3.74,0,0,1-3.75-3.75h0V9.93A3.75,3.75,0,0,1,5.62,6.18Z"/>
           </svg>
-        button.botton.refresh(v-on:click="newColors", aria-label="generate new palette").
+        button.botton.refresh(title="Or hit the Space bar", v-on:click="newColors", aria-label="generate new palette").
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 23" version="1.1" x="0px" y="0px"><path d="M 12.109896,2.9653518 C 10.830826,2.9134678 9.5257058,3.132602 8.2817758,3.648946 c -3.9806,1.652399 -6.2540499,5.897846 -5.4179699,10.123046 0.8360799,4.2253 4.5540699,7.274132 8.8613301,7.269532 a 0.9995584,1.0006417 14.999899 1 0 0,-2 c -3.3667302,0 -6.2475202,-2.360557 -6.9004002,-5.660157 -0.65294,-3.2997 1.11025,-6.592765 4.22266,-7.884765 3.1124002,-1.292 6.6825102,-0.213669 8.5488302,2.582031 1.85391,2.77709 1.49946,6.460477 -0.8418,8.845703 l 0.0781,-2.365234 a 1.0001,1.0001 0 0 0 -0.98242,-1.046875 1.0001,1.0001 0 0 0 -1.01758,0.982422 l -0.15235,4.59375 a 1.0001,1.0001 0 0 0 1.03321,1.033203 l 4.5957,-0.152344 a 1.0001,1.0001 0 1 0 -0.0664,-1.998047 l -1.79492,0.06055 c 2.74739,-3.056097 3.10892,-7.618693 0.80859,-11.064453 -1.64326,-2.461525 -4.33252,-3.887808 -7.14648,-4.0019532 z"/></svg>
         
 
