--- a/main.scss
+++ b/main.scss
@@ -7,7 +7,9 @@
 }
 
 body, html {
+  height: -webkit-fill-available;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 * {
@@ -111,6 +113,10 @@ body {
 
 .bg-wrap {
   overflow: hidden;
+  height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  
 }
 
 .wrap__hasBackground {
@@ -146,7 +152,8 @@ body {
   display: flex;
 
   @media (max-width: 850px) {
-    display: block;
+    flex-direction: column;
+    align-items: flex-start;
     padding: 1rem;
   }
 
@@ -170,6 +177,10 @@ body {
   //}
 
   min-height: 0.1vmax;
+
+  @media (max-width: 850px) {
+    min-height: 0;
+  }
 
   &:last-child,
   &:hover {
@@ -201,7 +212,6 @@ body {
 
   @media (max-width: 850px) {
     font-size: .6em;
-    margin-bottom: .15em;
   }
 }
 
