adds a manifest and prays

--- a/index.pug
+++ b/index.pug
@@ -25,7 +25,8 @@ html(lang="en-US")
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     meta(name="viewport", content="width=device-width, initial-scale=1")
-
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    
     link(href="https://rsms.me/inter/inter-ui.css", rel="stylesheet")
 
     link(rel="preconnect", href="https://fonts.gstatic.com")
