adds a whole bunch of meta things

--- a/index.pug
+++ b/index.pug
@@ -8,7 +8,18 @@ html(lang="en-US")
     meta(name='title', content='FarbVelo — Random Color Cycler')
     meta(name='description', content='Generative color harmonies. The random color expolorer')
 
-    link(rel="icon", href="/favicon.ico", type="image/x-icon")
+    
+    link(rel="apple-touch-icon" sizes="180x180" href="./public//apple-touch-icon.png")
+    
+    link(rel="icon", href="./public/favicon.ico", type="image/x-icon")
+    link(rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png")
+
+    link(rel="manifest" href="./public/site.webmanifest")
+    link(rel="mask-icon" href="./public/safari-pinned-tab.svg" color="#5bbad5")
+    
+    meta(name="msapplication-TileColor" content="#ffffff")
+    meta(name="theme-color" content="#ffffff")
 
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
@@ -26,7 +37,7 @@ html(lang="en-US")
 
     meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(name="apple-mobile-web-app-capable", content="yes")
-    
+
     link(href="https://rsms.me/inter/inter-ui.css", rel="stylesheet")
 
     link(rel="preconnect", href="https://fonts.gstatic.com")
@@ -124,6 +135,7 @@ html(lang="en-US")
                 li Picking ℕ0 hue's (color stops) using <a href="https://www.hsluv.org/" hreflang="en">HSLuv<a> at a user defined minimum angle ∠.
                 li Interpolating between color stops in CIE L*a*b* by default, using <a href="https://gka.github.io/chroma.js/">chroma.js</a>.
                 li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
+                li App Icon made by <a href="https://linktr.ee/Flatart">Flatart</a>.
                 li Refresh Icon made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
                 li Settings Icon made by <a href="https://iconix.si/home">Gregor</a>.
                 li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
