adds a manifest and prays

--- a/index.pug
+++ b/index.pug
@@ -135,12 +135,18 @@ html(lang="en-US")
                 li Picking ℕ0 hue's (color stops) using <a href="https://www.hsluv.org/" hreflang="en">HSLuv<a> at a user defined minimum angle ∠.
                 li Interpolating between color stops in CIE L*a*b* by default, using <a href="https://gka.github.io/chroma.js/">chroma.js</a>.
                 li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
-                li App Icon made by <a href="https://linktr.ee/Flatart">Flatart</a>.
-                li Refresh Icon made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
-                li Settings Icon made by <a href="https://iconix.si/home">Gregor</a>.
                 li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
                 li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and licensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> license.
-                
+            
+            aside
+              details
+                summary Credits
+                ol
+                  li All icons are from <a href="https://thenounproject.com/">the noun project</a>. They are using a Creative Commons Attribution Share Alike 4.0 license.
+                  li App Icon made by <a href="https://linktr.ee/Flatart">Flatart</a>.
+                  li Refresh Icon made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
+                  li Settings Icon made by <a href="https://iconix.si/home">Gregor</a>.
+          
           footer
             a(href="https://www.elastiq.ch/" hreflang="en").ellogo
               svg(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 352 185')
