--- a/index.pug
+++ b/index.pug
@@ -129,6 +129,15 @@ html(lang="en-US")
             h2 Farbvelo
             p. 
               FarbVelo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>). 
+            
+            aside
+              h2 Usage Tipps
+              ol
+                li Clicking and draging or swiping on the backgroud will change the palette padding.
+                li The left and right arrow key will change the padding as well.
+                li Pressing 'Space' generates a new platte using your current settings.
+                li On mobile phone you can add this page to your home screen for a nicer user experience.
+            
             aside
               h2 About
               ol
