--- a/index.pug
+++ b/index.pug
@@ -49,7 +49,7 @@ html(lang="en-US")
     #app.wrap(
       ref="app",
       :style="{'--color-first': firstColor, '--color-last': lastColor}" 
-      :class="{'wrap__hasOutlines': hasOutlines, 'wrap__hasGradients': hasGradients, 'wrap__showSettings': settingsVisible, 'wrap__hasBackground': hasBackground,}")
+      :class="{'is-loading': isLoading, 'is-animating': isAnimating, 'wrap__hidetext': hideText, 'wrap__hasOutlines': hasOutlines, 'wrap__hasGradients': hasGradients, 'wrap__showSettings': settingsVisible, 'wrap__hasBackground': hasBackground,}")
       .bg-wrap
         .bg(:style="{'background-image': backgroundGradient}")
       .pannel(v-on:pointerdown="cancelSwipe")
@@ -113,6 +113,10 @@ html(lang="en-US")
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasGradients")
           h4.pannel__settingtitle Show Glow
+
+        label.pannel__setting.pannel__setting--inline
+          input(type="checkbox", v-model="hideText")
+          h4.pannel__settingtitle Hide Text
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasOutlines")
