better intro nanimation

--- a/index.pug
+++ b/index.pug
@@ -45,7 +45,7 @@ html(lang="en-US")
     
     link(rel='stylesheet', media='all',  href='main.scss')
 
-  body
+  body.is-loading
     #app.wrap(
       ref="app",
       :style="{'--color-first': firstColor, '--color-last': lastColor}" 
