--- a/main.scss
+++ b/main.scss
@@ -112,7 +112,7 @@ body {
 .bg {
   opacity: 0;
   transform: scale(.7);
-  transition: 300ms opacity linear, 200ms transform ease-out 50ms;
+  transition: 300ms opacity linear, 220ms transform ease-out 50ms;
 }
 
 .bg-wrap {
@@ -796,7 +796,7 @@ body {
 
   .colors .color {
     opacity: 0;
-    transform: translateY(-150%) scaleY(.7) rotate3d(-.1, .01, 0, -100deg);
+    transform: translateY(0%) scaleY(.5) rotate3d(.1, 0, 0, 80deg);
     transform-origin: 50% 150%;
 
     &::after {
@@ -841,7 +841,7 @@ body {
   .colors .color {
     opacity: 1;
     transform: translateY(0) scaleY(1);
-    transform-origin: 50% 150%;
+    transform-origin: 50% 0%;
     transition: 250ms opacity linear,
                 200ms transform cubic-bezier(.445, .05, .55, .95);
     
@@ -859,8 +859,9 @@ body {
     
     @for $i from 1 through 10 {
       &:nth-child(#{$i}) {
-        transition-delay: #{130 + $i * 50}ms, #{50 + $i * 50}ms;
-
+        transition-delay: #{130 + $i * 60}ms, #{50 + $i * 60}ms;
+        transition-duration: #{250ms + $i * $i * 5ms}, #{200ms + $i * $i * 5ms};
+        
         &::after {
           animation-delay: #{700 + $i * 50}ms;
         }
