--- a/main.scss
+++ b/main.scss
@@ -154,6 +154,9 @@ body {
 .colors .color {
   position: relative;
   display: flex;
+  background-color: var(--color);
+  color: var(--color-text);
+  //background-image: linear-gradient(to top, var(--color-text) -10rem, var(--color) 50%);
 
   @media (max-width: 850px) {
     flex-direction: column;
@@ -166,20 +169,9 @@ body {
   padding: 0 1rem;
   flex-grow: 1;
 
-  /*
-  border: solid currentColor;
-  border-width: 0 2px;
-  */
   transition: 0ms color linear,
               0ms background-color linear,
               250ms padding-bottom cubic-bezier(.7, .3, .3, 1) 100ms;
-
-
-  //@for $i from 1 through 30 {
-  // &:nth-child(#{$i}) {
-     // transition-delay: #{50 + $i * 50}ms, #{50 + $i * 50}ms, 0ms;
-  // }
-  //}
 
   min-height: 0.1vmax;
 
@@ -647,6 +639,7 @@ body {
 .pannel {
   box-shadow: inset 0 0 0 1px #fff;
   overflow: auto;
+
   @media (max-width: 850px) {
     opacity: 0;
     z-index: 5;
