--- a/main.scss
+++ b/main.scss
@@ -647,6 +647,10 @@ body {
   }
 }
 
+.share-url {
+  font-size: .7em;
+}
+
 .wrap__showSettings .pannel {
   pointer-events: all;
   transform: translateX(-75%);
