adds simplex noise color function

--- a/index.pug
+++ b/index.pug
@@ -4,8 +4,8 @@ html(lang="en-US")
   head
     meta(charset='UTF-8')
 
-    title FarbVelo —— Random Color Cycler
-    meta(name='title', content='FarbVelo — Random Color Cycler')
+    title FarbVélo —— Random Color Cycler
+    meta(name='title', content='FarbVélo — Random Color Cycler')
     meta(name='description', content='Generative color harmonies. The random color expolorer')
 
 
@@ -24,14 +24,14 @@ html(lang="en-US")
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='og:title', content='FarbVelo — Random Color Cycler')
+    meta(property='og:title', content='FarbVélo — Random Color Cycler')
     meta(property='og:description', content='Generative color harmonies. The random color expolorer')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='twitter:title', content='FarbVelo — Random Color Cycler')
+    meta(property='twitter:title', content='FarbVélo — Random Color Cycler')
     meta(property='twitter:description', content='Generative color harmonies. The random color expolorer')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
@@ -131,9 +131,9 @@ html(lang="en-US")
                 {{ valueType }}
         .footer
           article.footer__about
-            h2 Farbvelo
+            h2 FarbVélo
             p.
-              FarbVelo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
+              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
 
             aside
               h2 Usage Tipps
