--- a/index.pug
+++ b/index.pug
@@ -133,7 +133,7 @@ html(lang="en-US")
           article.footer__about
             h2 FarbVélo
             p.
-              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
+              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and lots of gerates random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
 
             aside
               h2 Usage Tipps
