reduced motion mode

--- a/main.scss
+++ b/main.scss
@@ -894,3 +894,12 @@ body {
     opacity: 0.5;
   }
 }
+
+@media (prefers-reduced-motion) {
+  * {
+    animation-duration: 0.001ms !important;
+    animation-delay: 0s !important;
+    transition-delay: 0s !important;
+    transition-duration: 0.001ms !important;
+  }
+}
