--- a/index.pug
+++ b/index.pug
@@ -66,6 +66,13 @@ html(lang="en-US")
                 {{ functionName }}
 
         label.pannel__setting
+          h4.pannel__settingtitle Color Mode
+          .pannel__inputs
+            select(v-model="colorMode")
+              option(v-for="mode in colorModeList", :value=mode).
+                {{ mode }}
+
+        label.pannel__setting
           h4.pannel__settingtitle
             span Colors
             input(type="number", v-model.number="amount", min="3", max="10")
@@ -138,7 +145,7 @@ html(lang="en-US")
           article.footer__about
             h2 FarbVélo
             p.
-              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and lots of gerates random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
+              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and uses lots of gerates random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
 
             aside
               h2 Usage Tipps
